--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,5 +1,4 @@
 
-
 <div *ngIf="hero">
 
     <h2>{{hero.name | uppercase}} Details</h2>
@@ -8,5 +7,6 @@
       <label for="hero-name">Hero name: </label>
       <input id="hero-name" [(ngModel)]="hero.name" placeholder="Hero name"/>
     </div>
+    <button type="button" (click)="save()">save</button>
     <button type="button" (click)="goBack()">go back</button>
 </div>
